# mevcat

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: main.yml
docs/: FUNCTIONALITY.md
src/: cli.rs  main.rs
